# visionhub-cli

./: .gitignore  .pypirc  README.md  pyproject.toml  requirements.txt
.github/workflows/: python_package.yaml
example/: Dockerfile  PickleExample.ipynb  README.md  melody_mixer.py  model.py  model.yaml  requirements.txt
example/test_data/images/: example.pickle
visionhub-cli/: __init__.py  __main__.py
visionhub-cli/src/: config-template.yaml  config_processor.py  controllers.py  exceptions.py  pydantic_config_processor.py  utils.py
visionhub_cli/: __init__.py  __main__.py  entrypoint.py
visionhub_cli/src/: config_processor.py  controllers.py
