[tool.poetry]
name = "visionhub-cli"
version = "0.1.0"
description = "Console client for www.visionhub.ru platform"
authors = ["Andrey Chertkov <andreychertckov@yandex.ru>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
docker = "4.4.4"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
visionhub-cli = "visionhub_cli:main"
